version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/CDB/BFCommand.rst.txt
.. vale off



:class:`BFCommand`
==================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.CDB.BFCommand(iBFCommand: Ansys.Common.Interop.FEParsePlugin_ANSYS.IBFCommand)

   Bases: :py:obj:`object`


   
   Represents a BF command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: BFCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Lab`
            - Gets the label.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~Node`
            - Gets the node number.
          * - :py:attr:`~ValCount`
            - Gets the number of values.
          * - :py:attr:`~Values`
            - Gets the values.







Property detail
---------------
.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Lab
   :type: Optional[str]


   
   Gets the label.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Node
   :type: Optional[int]


   
   Gets the node number.
















   ..
       !! processed by numpydoc !!

.. py:property:: ValCount
   :type: Optional[Any]


   
   Gets the number of values.
















   ..
       !! processed by numpydoc !!

.. py:property:: Values
   :type: Optional[tuple[Any]]


   
   Gets the values.
















   ..
       !! processed by numpydoc !!







.. vale on